styles/styles.css
/* Variables */
:root {
	--bright-green: #DBF226;
	--dark-blue: #052941;
}


/* Main Rules */

* {
	box-sizing: border-box;
}
body {
	position: relative;
	width: 100%;
	height: 100%;
}

main {
	position: fixed;
	width: 100%;
	height: 100%;
	background-color: var(--dark-blue);
	z-index: 1;
}

#test {
	margin-top: 10rem;
	fill: rgba(133, 25, 25, 0.398);
}

/* Logo */
#logo.intro{
	position: absolute;
	width: 10rem;
	z-index: 2;
	top: 50vh;
	left: 50vw;
	transform: translate(-50%, -50%);
}

#logo_J_path path{
	stroke: 10px solid var(--bright-green);
	/* fill: none; */
}
#logo_J_test path{
	fill: none;
}

.logo_letter {
	/* transition: all 2s ease; */
	/* stroke-dashoffset: 0; */
	display: none;
}

.logo_letter.swirl {
	display: block;
	animation: logo_text_swirl_in 2s ease forwards;
}

.logo_letter.swirl-off {
	animation: logo_text_swirl_off 2s ease forwards;
}



/* header */
header {
	position: fixed;
	top: 0;
	z-index: 10;
	width: 100%;
	height: 200px;
}


/* logo animations */

@keyframes logo_text_swirl_in {
	to {
		stroke-dashoffset: 0;
	}
}


@keyframes logo_text_swirl_off {
	from {
		stroke-dashoffset: 0%;
	}
}

